seo and metadata

--- a/index.html
+++ b/index.html
@@ -1,10 +1,42 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+   <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Resplashpad - Unsplash with React."
+    />
+    <meta
+      property="og:description"
+      content="Resplashpad is a blazing fast photo app using Unsplash and React."
+    />
+    <meta property="og:title" content="Resplashpad" />
+    <meta property="og:image" content="/opengraph-image.png" />
+    <meta name="twitter:image" content="/twitter-image.png" />
+    <meta
+      name="twitter:description"
+      content="Resplashpad is a blazing fast photo app using Unsplash and React."
+    />
+    <meta name="twitter:title" content="Resplashpad" />
+
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
     <title>Resplashpad</title>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Resplashpad",
+        "url": "https://resplashpad.vercel.app",
+        "description": "Resplashpad is a blazing fast photo app using Unsplash and React."
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
